# solo6-21

./: README.md  logalyzer.yaml  logalyzer.yaml.example  pyproject.toml  requirements.txt  test_alert_context.py  test_export.json  test_resume_flow.py
.logalyzer_sessions/: ef573162.json
logalyzer/: config.py
logalyzer/aggregator/: __init__.py  aggregator.py
logalyzer/alerts/: __init__.py  engine.py
logalyzer/cli/: main.py
logalyzer/filters/: __init__.py  filter.py
logalyzer/parsers/: parser.py
logalyzer/session/: __init__.py  manager.py
logalyzer/sources/: __init__.py  base.py  cloud.py  local.py  ssh.py
